# git-analysis

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  analyze.py  cli.sh  config-template.json  config.example.json  pyproject.toml  reddit.txt  validate_reports.py
docs/: TOOLKIT_ADOPTION_RATING_DATA_BRIEF.md  TOOLKIT_GITHUB_VERIFICATION_BRIEF.md  backend-dev-requirements.md  backend-support.md  cli.md  configuration.md  development.md  github-username-verification.md  index.md  output.md  publishing.md  report-walkthrough.md  toolkit-github-verification.md  troubleshooting.md  upload-payload.md
skills/git-analysis-report-triage/: SKILL.md
skills/git-analysis-spike-investigation/: SKILL.md
src/git_analysis/: analysis_aggregate.py  analysis_cli.py  analysis_paths.py  analysis_periods.py  analysis_render.py  analysis_repo.py  analysis_run.py  (+12 more)
tests/: conftest.py  test_aggregate.py  test_backend_support_layout.py  test_backend_support_period_parsing.py  test_bootstrap_deletion_dominant.py  test_bootstrap_exclude_shas.py  test_bootstrap_extreme_heuristics.py  test_cli_help.py  test_config_bootstrap.py  test_display_name_cli.py  test_display_name_v1.py  test_exclude_commits_and_top_commits_csv.py  test_github_verification_cli.py  test_llm_inflection_stats_integration.py  test_markup_outputs.py  test_parse_numstat_stream_stderr_deadlock.py  test_paths.py  test_periods.py  test_publish_wizard_integration.py  test_render.py  test_selection_excluded_repos.py  test_startup_header.py  test_upload_existing_report_dir_cli.py  test_upload_package_v1.py  test_weekly_timeseries.py
(+3 files in other folders)
