[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "git-analysis"
version = "0.1.0"
description = "Yearly Git statistics across many local repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
git-analysis = "git_analysis.cli:main"
git-analysis-validate = "git_analysis.validate_reports:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

